k8s/base/loja-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loja-service
  labels:
    app: loja-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loja-service
  template:
    metadata:
      labels:
        app: loja-service
    spec:
      containers:
        - name: loja-service
          image: loja-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
          livenessProbe:
            httpGet:
              path: /api/loja/actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /api/loja/actuator/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /api/loja/actuator/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 30
