k8s/base/loja-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loja-service
  labels:
    app: loja-service
spec:
  selector:
    app: loja-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
