k8s/base/loja-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loja-ingress
  namespace: loja
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/loja
            pathType: Prefix
            backend:
              service:
                name: loja-service
                port:
                  number: 8080
